--- a/src/main/resources/UserAbonnementsView.fxml
+++ b/src/main/resources/UserAbonnementsView.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <AnchorPane prefHeight="648.0" prefWidth="1261.0" styleClass="pane_navBar" stylesheets="@styleAb.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.UserAbonnementsController">
     <children>
         <FlowPane fx:id="flowPane" hgap="25.0" layoutX="34.0" layoutY="156.0" prefHeight="450.0" prefWidth="1279.0" styleClass="flow-pane" vgap="25.0">
@@ -30,5 +32,9 @@
                 <Image url="@images/3d-illustration-hand-and-give-salary-png.png" />
             </image>
         </ImageView>
+        <Button fx:id="btnScanQR" layoutX="1050.0" layoutY="650.0" text="Scanner QR" />
+        <TextField fx:id="qrResultField" layoutX="850.0" layoutY="650.0" prefWidth="180.0" promptText="Résultat QR" />
+
+
     </children>
 </AnchorPane>
