--- a/src/main/resources/Abonnements.fxml
+++ b/src/main/resources/Abonnements.fxml
@@ -43,7 +43,7 @@
             </Label>
          <ImageView fitHeight="147.0" fitWidth="187.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@images/Lovepik_com-450156572-Subscription%20Model.png" />
+               <Image url="@images/Subscription Model.png" />
             </image>
          </ImageView>
 
